buildscript {
	dependencies {
		classpath "org.flywaydb:flyway-core:9.18.0"
		classpath "org.flywaydb:flyway-mysql:9.18.0"
	}
}

plugins {
	id 'java'
	id 'org.springframework.boot' version '3.0.6'
	id 'io.spring.dependency-management' version '1.1.0'
	id "org.flywaydb.flyway" version "9.18.0"
}

group = 'com.springboot'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

repositories {
	mavenCentral()
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'mysql:mysql-connector-java:8.0.33'
	compileOnly 'org.projectlombok:lombok:1.18.26'
	annotationProcessor 'org.projectlombok:lombok:1.18.26'
	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

flyway {
	url = 'jdbc:mysql://localhost:3306/mysql-demo?createDatabaseIfNotExist=true'
	user = 'root'
	password = '123456'
	schemas = ['mysql-demo']
	cleanDisabled = false
}